# openai_rs

./: Cargo.toml  README.md  bill.json  cache.json
src/: batteries.md  client.rs  constants.rs  lib.rs
src/models/: bill.rs  cache.rs  gpt_models.rs  hash.rs  mod.rs  query.rs  req_and_res.rs  request.rs  response.rs
src/models/client/: completion.rs  core.rs  database.rs  mod.rs  requests.rs
src/models/db/: chat_completions.rs  db.rs  db.sql  meta_completions.rs  mod.rs  prelude.rs  text_completions.rs
src/models/queries/: chat_query.rs  meta_query.rs  mod.rs  text_query.rs
src/tests/: cache.rs  initializations.rs  mod.rs
src/tests/tmp/: cache_tests_1.json
