[package]
name = "openai_rs"
version = "0.1.0"
edition = "2021"
authors = ["Noah Steckley <Noah3141@gmail.com>","Dongri Jin <dongrify@gmail.com>"]
description = "Unofficial Rust library for OpenAI's chatgpt API"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.96"
serde = { version = "1.0.160", features = ["derive"] } # Serialization deserialization
reqwest = { version = "0.11.11", features = ["stream","multipart","json"] }
chrono = "0.4.26"
sea-orm = { version = "0.12.10", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
sea-query = "0.30.6"
lopdf = "0.31.0"
dotenvy = "0.15.7"
tokio ={ version = "1.35.1", features = ["rt", "macros"]}